--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 mu: 1.0             # Signal strength under null hypothesis
-bkg: 10.0           # Background expectation
-sig: 1.0            # Signal expectation
+bkg: [10.0]          # Background expectation
+sig: [1.0]           # Signal expectation
 bkg_sigma: 0.2      # Uncertainty in background
 alpha: 0.05         # Confidence level (e.g., for hypothesis testing)
 limit_type: "CLs" # Type of limit: CLs, PCL
